gl_ext_api.h


typedef char GLbyte;

typedef char GLchar;

typedef double GLdouble;

typedef float GLfloat;

typedef int GLint;

typedef int GLsizei;

typedef short GLshort;

typedef unsigned char GLboolean;

typedef unsigned char GLubyte;

typedef unsigned int GLenum;

typedef unsigned int GLsizei;

typedef unsigned int GLuint;

typedef unsigned short GLushort;

typedef void GLvoid;

void Uniform3f(GLint, GLfloat, GLfloat, GLfloat);

void Uniform4f(GLint, GLfloat, GLfloat, GLfloat, GLfloat);

void Uniform1i(GLint, GLint);

void Uniform2i(GLint, GLint, GLint);

void Uniform3i(GLint, GLint, GLint, GLint);

void Uniform4i(GLint, GLint, GLint, GLint, GLint);

void Uniform1fv(GLint, GLsizei, GLfloat *);

void Uniform2fv(GLint, GLsizei, GLfloat *);

void Uniform3fv(GLint, GLsizei, GLfloat *);

void Uniform4fv(GLint, GLsizei, GLfloat *);

void Uniform1iv(GLint, GLsizei, GLint *);

void Uniform2iv(GLint, GLsizei, GLint *);

void Uniform3iv(GLint, GLsizei, GLint *);

void Uniform4iv(GLint, GLsizei, GLint *);

void UniformMatrix2fv(GLint, GLsizei, GLboolean, GLfloat *);

void UniformMatrix3fv(GLint, GLsizei, GLboolean, GLfloat *);

void UniformMatrix4fv(GLint, GLsizei, GLboolean, GLfloat *);

void GetShaderfv (GLuint, GLenum, GLfloat *);

void GetShaderiv (GLuint, GLenum, GLint *);

void GetProgramfv(GLuint, GLenum, GLfloat *);

void GetProgramiv(GLuint, GLenum, GLint *);

void GetShaderInfoLog (GLuint, GLsizei, GLsizei *, GLchar *);

void GetProgramInfoLog(GLuint, GLsizei, GLsizei *, GLchar *);

void GetAttachedShaders (GLuint, GLsizei, GLsizei *, GLuint *);

GLint GetUniformLocation(GLuint, const GLchar *);

void GetActiveUniform(GLuint GLuint, GLsizei, GLsizei *, GLint *, GLenum *, GLchar *);

void GetUniformfv(GLuint GLint, GLfloat *);

void GetUniformiv(GLuint GLint, GLint *);

void GetShaderSource(GLuint GLsizei, GLsizei *, GLchar *);

void VertexAttrib1f   (GLuint, GLfloat);

void VertexAttrib1s   (GLuint, GLshort);

void VertexAttrib1d   (GLuint, GLdouble);

void VertexAttrib2f   (GLuint, GLfloat, GLfloat);

void VertexAttrib2s   (GLuint, GLshort, GLshort);

void VertexAttrib2d   (GLuint, GLdouble, GLdouble);

void VertexAttrib3f   (GLuint, GLfloat, GLfloat, GLfloat);

void VertexAttrib3s   (GLuint, GLshort, GLshort, GLshort);

void VertexAttrib3d   (GLuint, GLdouble, GLdouble, GLdouble);

void VertexAttrib4f   (GLuint, GLfloat, GLfloat, GLfloat, GLfloat);

void VertexAttrib4s   (GLuint, GLshort, GLshort, GLshort, GLshort);

void VertexAttrib4d   (GLuint, GLdouble,GLdouble,GLdouble,GLdouble);

void VertexAttrib4Nub (GLuint, GLubyte, GLubyte, GLubyte, GLubyte);

void VertexAttrib1fv  (GLuint, const GLfloat *);

void VertexAttrib1sv  (GLuint, const GLshort *);

void VertexAttrib1dv  (GLuint, const GLdouble *);

void VertexAttrib2fv  (GLuint, const GLfloat *);

void VertexAttrib2sv  (GLuint, const GLshort *);

void VertexAttrib2dv  (GLuint, const GLdouble *);

void VertexAttrib3fv  (GLuint, const GLfloat *);

void VertexAttrib3sv  (GLuint, const GLshort *);

void VertexAttrib3dv  (GLuint, const GLdouble *);

void VertexAttrib4fv  (GLuint, const GLfloat *);

void VertexAttrib4sv  (GLuint, const GLshort *);

void VertexAttrib4dv  (GLuint, const GLdouble *);

void VertexAttrib4iv  (GLuint, const GLint *);

void VertexAttrib4bv  (GLuint, const GLbyte *);

void VertexAttrib4ubv (GLuint, const GLubyte *);

void VertexAttrib4usv (GLuint, const GLushort *);

void VertexAttrib4uiv (GLuint, const GLuint *);

void VertexAttrib4Nbv (GLuint, const GLbyte *);

void VertexAttrib4Nsv (GLuint, const GLshort *);

void VertexAttrib4Niv (GLuint, const GLint *);

void VertexAttrib4Nubv(GLuint, const GLubyte *);

void VertexAttrib4Nusv(GLuint, const GLushort *);

void VertexAttrib4Nuiv(GLuint, const GLuint *);

void VertexAttribPointer(GLuint GLint, GLenum, GLboolean, GLsizei, const GLvoid *);

void EnableVertexAttribArray(GLuint);

void DisableVertexAttribArray(GLuint);


void BindAttribLocation(GLuint, GLuint, const GLchar *);

void GetActiveAttrib   (GLuint, GLuint, GLsizei, GLsizei *, GLint *, GLenum *, GLchar *);

GLint GetAttribLocation(GLuint, const GLchar *);

void GetVertexAttribdv(GLuint, GLenum, GLdouble *);

void GetVertexAttribfv(GLuint, GLenum, GLfloat *);

void GetVertexAttribiv(GLuint, GLenum, GLint *);

void GetVertexAttribPointerv(GLuint, GLenum, GLvoid **);


void DrawBuffers(GLsizei n, const GLenum *);


void StencilOpSeparate  (GLenum, GLenum, GLenum, GLenum);

void StencilFuncSeparate(GLenum, GLenum, GLint,  GLuint);




void UniformMatrix2x3fv(GLint, GLsizei, GLboolean, const GLfloat *);

void UniformMatrix3x2fv(GLint, GLsizei, GLboolean, const GLfloat *);

void UniformMatrix2x4fv(GLint, GLsizei, GLboolean, const GLfloat *);

void UniformMatrix4x2fv(GLint, GLsizei, GLboolean, const GLfloat *);

void UniformMatrix3x4fv(GLint, GLsizei, GLboolean, const GLfloat *);

void UniformMatrix4x3fv(GLint, GLsizei, GLboolean, const GLfloat *);


void ColorMaski(GLuint, GLboolean, GLboolean, GLboolean, GLboolean);