gl_ext_api.scm

      (foreign-lambda void "Uniform3f" integer float float float)))
  (begin
    (define Uniform4f
      (foreign-lambda void "Uniform4f" integer float float float float)))
  (begin (define Uniform1i (foreign-lambda void "Uniform1i" integer integer)))
  (begin
    (define Uniform2i
      (foreign-lambda void "Uniform2i" integer integer integer)))
  (begin
    (define Uniform3i
      (foreign-lambda void "Uniform3i" integer integer integer integer)))
  (begin
    (define Uniform4i
      (foreign-lambda
        void
        "Uniform4i"
        integer
        integer
        integer
        integer
        integer)))
  (begin
    (define Uniform1fv
      (foreign-lambda void "Uniform1fv" integer unsigned-integer f32vector)))
  (begin
    (define Uniform2fv
      (foreign-lambda void "Uniform2fv" integer unsigned-integer f32vector)))
  (begin
    (define Uniform3fv
      (foreign-lambda void "Uniform3fv" integer unsigned-integer f32vector)))
  (begin
    (define Uniform4fv
      (foreign-lambda void "Uniform4fv" integer unsigned-integer f32vector)))
  (begin
    (define Uniform1iv
      (foreign-lambda void "Uniform1iv" integer unsigned-integer s32vector)))
  (begin
    (define Uniform2iv
      (foreign-lambda void "Uniform2iv" integer unsigned-integer s32vector)))
  (begin
    (define Uniform3iv
      (foreign-lambda void "Uniform3iv" integer unsigned-integer s32vector)))
  (begin
    (define Uniform4iv
      (foreign-lambda void "Uniform4iv" integer unsigned-integer s32vector)))
  (begin
    (define UniformMatrix2fv
      (foreign-lambda
        void
        "UniformMatrix2fv"
        integer
        unsigned-integer
        unsigned-char
        f32vector)))
  (begin
    (define UniformMatrix3fv
      (foreign-lambda
        void
        "UniformMatrix3fv"
        integer
        unsigned-integer
        unsigned-char
        f32vector)))
  (begin
    (define UniformMatrix4fv
      (foreign-lambda
        void
        "UniformMatrix4fv"
        integer
        unsigned-integer
        unsigned-char
        f32vector)))
  (begin
    (define GetShaderfv
      (foreign-lambda
        void
        "GetShaderfv"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define GetShaderiv
      (foreign-lambda
        void
        "GetShaderiv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetProgramfv
      (foreign-lambda
        void
        "GetProgramfv"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define GetProgramiv
      (foreign-lambda
        void
        "GetProgramiv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetShaderInfoLog
      (foreign-lambda
        void
        "GetShaderInfoLog"
        unsigned-integer
        unsigned-integer
        u32vector
        c-string)))
  (begin
    (define GetProgramInfoLog
      (foreign-lambda
        void
        "GetProgramInfoLog"
        unsigned-integer
        unsigned-integer
        u32vector
        c-string)))
  (begin
    (define GetAttachedShaders
      (foreign-lambda
        void
        "GetAttachedShaders"
        unsigned-integer
        unsigned-integer
        u32vector
        u32vector)))
  (begin
    (define GetUniformLocation
      (foreign-lambda integer "GetUniformLocation" unsigned-integer c-string)))
  (begin
    (define GetActiveUniform
      (foreign-lambda
        void
        "GetActiveUniform"
        unsigned-integer
        unsigned-integer
        u32vector
        s32vector
        u32vector
        c-string)))
  (begin
    (define GetUniformfv
      (foreign-lambda void "GetUniformfv" unsigned-integer f32vector)))
  (begin
    (define GetUniformiv
      (foreign-lambda void "GetUniformiv" unsigned-integer s32vector)))
  (begin
    (define GetShaderSource
      (foreign-lambda
        void
        "GetShaderSource"
        unsigned-integer
        u32vector
        c-string)))
  (begin
    (define VertexAttrib1f
      (foreign-lambda void "VertexAttrib1f" unsigned-integer float)))
  (begin
    (define VertexAttrib1s
      (foreign-lambda void "VertexAttrib1s" unsigned-integer short)))
  (begin
    (define VertexAttrib1d
      (foreign-lambda void "VertexAttrib1d" unsigned-integer double)))
  (begin
    (define VertexAttrib2f
      (foreign-lambda void "VertexAttrib2f" unsigned-integer float float)))
  (begin
    (define VertexAttrib2s
      (foreign-lambda void "VertexAttrib2s" unsigned-integer short short)))
  (begin
    (define VertexAttrib2d
      (foreign-lambda void "VertexAttrib2d" unsigned-integer double double)))
  (begin
    (define VertexAttrib3f
      (foreign-lambda
        void
        "VertexAttrib3f"
        unsigned-integer
        float
        float
        float)))
  (begin
    (define VertexAttrib3s
      (foreign-lambda
        void
        "VertexAttrib3s"
        unsigned-integer
        short
        short
        short)))
  (begin
    (define VertexAttrib3d
      (foreign-lambda
        void
        "VertexAttrib3d"
        unsigned-integer
        double
        double
        double)))
  (begin
    (define VertexAttrib4f
      (foreign-lambda
        void
        "VertexAttrib4f"
        unsigned-integer
        float
        float
        float
        float)))
  (begin
    (define VertexAttrib4s
      (foreign-lambda
        void
        "VertexAttrib4s"
        unsigned-integer
        short
        short
        short
        short)))
  (begin
    (define VertexAttrib4d
      (foreign-lambda
        void
        "VertexAttrib4d"
        unsigned-integer
        double
        double
        double
        double)))
  (begin
    (define VertexAttrib4Nub
      (foreign-lambda
        void
        "VertexAttrib4Nub"
        unsigned-integer
        unsigned-char
        unsigned-char
        unsigned-char
        unsigned-char)))
  (begin
    (define VertexAttrib1fv
      (foreign-lambda void "VertexAttrib1fv" unsigned-integer f32vector)))
  (begin
    (define VertexAttrib1sv
      (foreign-lambda void "VertexAttrib1sv" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib1dv
      (foreign-lambda void "VertexAttrib1dv" unsigned-integer f64vector)))
  (begin
    (define VertexAttrib2fv
      (foreign-lambda void "VertexAttrib2fv" unsigned-integer f32vector)))
  (begin
    (define VertexAttrib2sv
      (foreign-lambda void "VertexAttrib2sv" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib2dv
      (foreign-lambda void "VertexAttrib2dv" unsigned-integer f64vector)))
  (begin
    (define VertexAttrib3fv
      (foreign-lambda void "VertexAttrib3fv" unsigned-integer f32vector)))
  (begin
    (define VertexAttrib3sv
      (foreign-lambda void "VertexAttrib3sv" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib3dv
      (foreign-lambda void "VertexAttrib3dv" unsigned-integer f64vector)))
  (begin
    (define VertexAttrib4fv
      (foreign-lambda void "VertexAttrib4fv" unsigned-integer f32vector)))
  (begin
    (define VertexAttrib4sv
      (foreign-lambda void "VertexAttrib4sv" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib4dv
      (foreign-lambda void "VertexAttrib4dv" unsigned-integer f64vector)))
  (begin
    (define VertexAttrib4iv
      (foreign-lambda void "VertexAttrib4iv" unsigned-integer s32vector)))
  (begin
    (define VertexAttrib4bv
      (foreign-lambda void "VertexAttrib4bv" unsigned-integer c-string)))
  (begin
    (define VertexAttrib4ubv
      (foreign-lambda void "VertexAttrib4ubv" unsigned-integer u8vector)))
  (begin
    (define VertexAttrib4usv
      (foreign-lambda void "VertexAttrib4usv" unsigned-integer u16vector)))
  (begin
    (define VertexAttrib4uiv
      (foreign-lambda void "VertexAttrib4uiv" unsigned-integer u32vector)))
  (begin
    (define VertexAttrib4Nbv
      (foreign-lambda void "VertexAttrib4Nbv" unsigned-integer c-string)))
  (begin
    (define VertexAttrib4Nsv
      (foreign-lambda void "VertexAttrib4Nsv" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib4Niv
      (foreign-lambda void "VertexAttrib4Niv" unsigned-integer s32vector)))
  (begin
    (define VertexAttrib4Nubv
      (foreign-lambda void "VertexAttrib4Nubv" unsigned-integer u8vector)))
  (begin
    (define VertexAttrib4Nusv
      (foreign-lambda void "VertexAttrib4Nusv" unsigned-integer u16vector)))
  (begin
    (define VertexAttrib4Nuiv
      (foreign-lambda void "VertexAttrib4Nuiv" unsigned-integer u32vector)))
  (begin
    (define VertexAttribPointer
      (foreign-lambda
        void
        "VertexAttribPointer"
        unsigned-integer
        unsigned-integer
        unsigned-char
        unsigned-integer
        (c-pointer void))))
  (begin
    (define EnableVertexAttribArray
      (foreign-lambda void "EnableVertexAttribArray" unsigned-integer)))
  (begin
    (define DisableVertexAttribArray
      (foreign-lambda void "DisableVertexAttribArray" unsigned-integer)))
  (begin
    (define BindAttribLocation
      (foreign-lambda
        void
        "BindAttribLocation"
        unsigned-integer
        unsigned-integer
        c-string)))
  (begin
    (define GetActiveAttrib
      (foreign-lambda
        void
        "GetActiveAttrib"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        u32vector
        s32vector
        u32vector
        c-string)))
  (begin
    (define GetAttribLocation
      (foreign-lambda integer "GetAttribLocation" unsigned-integer c-string)))
  (begin
    (define GetVertexAttribdv
      (foreign-lambda
        void
        "GetVertexAttribdv"
        unsigned-integer
        unsigned-integer
        f64vector)))
  (begin
    (define GetVertexAttribfv
      (foreign-lambda
        void
        "GetVertexAttribfv"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define GetVertexAttribiv
      (foreign-lambda
        void
        "GetVertexAttribiv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetVertexAttribPointerv
      (foreign-lambda
        void
        "GetVertexAttribPointerv"
        unsigned-integer
        unsigned-integer
        (c-pointer (c-pointer void)))))
  (begin
    (define DrawBuffers
      (foreign-lambda void "DrawBuffers" unsigned-integer u32vector)))
  (begin
    (define StencilOpSeparate
      (foreign-lambda
        void
        "StencilOpSeparate"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define StencilFuncSeparate
      (foreign-lambda
        void
        "StencilFuncSeparate"
        unsigned-integer
        unsigned-integer
        integer
        unsigned-integer)))
  (begin
    (define UniformMatrix2x3fv
      (foreign-lambda
        void
        "UniformMatrix2x3fv"
        integer
        unsigned-integer
        unsigned-char
        f32vector)))
  (begin
    (define UniformMatrix3x2fv
      (foreign-lambda
        void
        "UniformMatrix3x2fv"
        integer
        unsigned-integer
        unsigned-char
        f32vector)))
  (begin
    (define UniformMatrix2x4fv
      (foreign-lambda
        void
        "UniformMatrix2x4fv"
        integer
        unsigned-integer
        unsigned-char
        f32vector)))
  (begin
    (define UniformMatrix4x2fv
      (foreign-lambda
        void
        "UniformMatrix4x2fv"
        integer
        unsigned-integer
        unsigned-char
        f32vector)))
  (begin
    (define UniformMatrix3x4fv
      (foreign-lambda
        void
        "UniformMatrix3x4fv"
        integer
        unsigned-integer
        unsigned-char
        f32vector)))
  (begin
    (define UniformMatrix4x3fv
      (foreign-lambda
        void
        "UniformMatrix4x3fv"
        integer
        unsigned-integer
        unsigned-char
        f32vector)))
  (begin
    (define ColorMaski
      (foreign-lambda
        void
        "ColorMaski"
        unsigned-integer
